# BYD-Engine

./: CMakeLists.txt  Cube.cpp  Cube.h  Graphics.cpp  Graphics.h  Main.cpp  Main.h  OGL.cpp  OGL.h  README.md  Shader.cpp  Shader.h  Triangle.cpp  Triangle.h  Window.cpp  Window.h
3rd/glad4.6/src/: glad.c
Direct3D9/: Direct3D9.cpp  Direct3D9.h
OpenGL4.6/: OGL.h
